# paddy_doctor

./: .gitignore  main.py  predict.py  prepare_data.py  pyproject.toml  submission.py  train.py
notebooks/: augmentation.ipynb  data_prepare.ipynb  explore.ipynb  multimodal_model.ipynb
src/: augmentations.py  dataset.py  engine.py  model.py
